mule-user-guide/v/3.4/installing-an-enterprise-license.adoc
= Installing an Enterprise License

MuleSoft makes available trial versions of its Enterprise Edition runtime for the purpose of evaluation. Though perfect for exploring the myriad uses of Mule ESB, Mule Studio and Mule Management Console, the trial license for the Enterprise Edition limits usage of the runtime. Complete the following steps to acquire and install an *Enterprise Edition license*, then begin using Mule ESB runtime in a production environment. 

. mailto:info@mulesoft.com[Contact MuleSoft] to acquire an *Enterprise Edition license* in the form of a `license.lic` file.
. If you are installing your license on multiple platforms, back up your new `license.lic` file in another location before proceeding.
. Open the terminal or command line on your system.
. On Mac/Unix/Linux, from the `$MULE_HOME/bin` directory, run the following command:    
+
`mule -installLicense ~/license.lic` +
 +
On Windows, first copy the `license.lic` file into the \bin folder, then execute the following in the command line: +
 +
`mule -installLicense license.lic`
. Mule removes the trial license and replaces it with the enterprise edition license.  In the `$MULE_HOME/conf` directory, Mule saves a new file called `muleLicenseKey.lic`
+


== Verify or Remove Enterprise Edition License

To verify that Mule successfully installed your Enterprise Edition license, run the following command:

`mule -verifyLicense`

To uninstall a previously installed license, run the following command:

`mule -unInstallLicense`


== Download your license key file

* Login to the Support portal link:https://support.mulesoft.com[here]. If you do not have credentials to login, please contact your Customer Success Manager.

* Click the "Subscriptions" tab located on the top of the Support Portal Home page.

* Click on the "Subscription Name" of the Subscription you would like a license key for. Please note that you must click on the "Subscription Name" (second column on the right) or you will not be forwarded to the correct page.

* Click on the "License ID" number found on the bottom left of the page.

* Click on the "View" button to download your license key.

== Install Enterprise Edition License on Embedded Mule Server

Though not recommended for production environments, you have the option of installing an Enterprise Edition license on the embedded Mule Server that comes bundled with Mule ESB with Studio and Enterprise Edition runtime.

. Download and install Mule ESB with Mule Management Console and Enterprise Edition runtime.
. mailto:info@mulesoft.com[Contact MuleSoft] to acquire an *Enterprise Edition license* in the form of a `license.lic` file.
. Complete the steps outlined above to install the new license on your Mule ESB standalone runtime.
. From the `$MULE_HOME/conf` directory, copy the new license file that Mule stored:   `muleLicenseKey.lic`
. Paste the `muleLicenseKey.lic` file into the classpath of your embedded application in Mule.

== Install Product Licenses

To use the SAP Connector and High Availability Clustering, you must first acquire, then install a product license.  mailto:info@mulesoft.com[Contact MuleSoft] to acquire a license for one of the above products. 

== See Also

* http://www.mulesoft.org/documentation/display/current/Getting+Started+with+Mule+Studio[Get started] with Mule Studio.
* Learn more about the http://www.mulesoft.org/documentation/display/current/Mule+Management+Console[Mule Management Console].
* link:/mule-user-guide/v/3.4/installing-extensions[Extend Mule] with plugins, modules, runtimes and connectors.
