mule-user-guide/v/3.8/installing-an-enterprise-license.adoc
= Installing an Enterprise License
:keywords: mule, studio, enterprise, ee, premium features, paid features, purchase, license, licensed

MuleSoft makes available trial versions of its Enterprise Edition runtime for the purpose of evaluation. Though perfect for exploring the myriad uses of Mule, Anypoint Studio, and Mule Management Console, the trial license for Enterprise limits usage of the runtime. Complete the following steps to acquire and install an *Enterprise license*, then begin using Mule runtime in a production environment. 

. mailto:info@mulesoft.com[Contact MuleSoft] to acquire an *Enterprise license* in the form of a `license.lic` file.
. Before installing, it's recommended to remove the previous License from your `$MULE_HOME` directory. To do so, navigate to `$MULE_HOME/conf/` and delete the existing `muleLicenseKey.lic` file.
. If you are installing your license on multiple platforms, back up your new `license.lic` file in another location before proceeding.
. Make sure that the Mule Server is *stopped (not running)* and then open the terminal or command line on your system.
. On *Mac/Unix/Linux*, from the `$MULE_HOME/bin` directory, run the following command:    
+
`mule -installLicense ~/license.lic` +
 +
On *Windows*, first copy the `license.lic` file into the \bin folder, then execute the following in the command line: +
 +
`mule -installLicense license.lic `
. In the `$MULE_HOME/conf` directory, Mule saves a new file called `muleLicenseKey.lic`. This shows that the license has been installed. 
. *Start* your Mule Server again, by the usual means.
+


== Verify or Remove Enterprise Edition License

Make sure that the Mule Server is *stopped (not running)* and then open the terminal or command line on your system.

To verify that Mule successfully installed your Enterprise license, run the following command:

`mule -verifyLicense`

To uninstall a previously installed license, run the following command:

`mule -unInstallLicense`

Sometimes the license installation fails and it might be necessary to manually delete `$MULE_HOME/conf/muleLicenseKey.lic`


== Download your license key file

* Login to the Support portal link:https://support.mulesoft.com[here]. If you do not have credentials to login, please contact your Customer Success Manager.

* Click the "Subscriptions" tab located on the top of the Support Portal Home page.

* Click on the "Subscription Name" of the Subscription you would like a license key for. Please note that you must click on the "Subscription Name" (second column on the right) or you will not be forwarded to the correct page.

* Click on the "License ID" number found on the bottom left of the page.

* Click on the "View" button to download your license key.


== Install Enterprise License on Embedded Mule Server

Though not recommended for production environments, you have the option of installing an Enterprise license on the embedded Mule Server that comes bundled with Mule with Studio.

. Download and install Mule with Mule Management Console and Enterprise Edition runtime.
. mailto:info@mulesoft.com[Contact MuleSoft] to acquire an *Enterprise Edition license* in the form of a `license.lic` file.
. Complete the steps outlined above to install the new license on your Mule standalone runtime.
. From the `$MULE_HOME/conf` directory, copy the new license file that Mule stored:   `muleLicenseKey.lic`
. Paste the `muleLicenseKey.lic` file into the classpath of your embedded application in Mule.

== Install Product Licenses

To use the SAP Connector and High Availability Clustering, you must first acquire, then install a product license. mailto:info@mulesoft.com[Contact MuleSoft] to acquire a license for one of the above products. 

[TIP]
The link:https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/[MuleSoft Enterprise Maven customer repository] allows you to access Mule Enterprise modules, connectors, and other components not included in the trial or community versions. See link:/mule-user-guide/v/3.8/configuring-maven-to-work-with-mule-esb[Configuring Maven to Work with Mule] for details.

== See Also

* Get started learning the link:/mule-user-guide/v/3.8/mule-concepts[Key Concepts].
* Learn more about the link:/mule-management-console/v/3.7[Mule Management Console].
* link:/anypoint-studio/v/6/installing-extensions[Extend Mule] with plugins, modules, runtimes and connectors.
